# CommonUtilities

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  init.bat
cmake/config/: config.cmake
cmake/config/Lib/: config.cmake
conan/: conanfile.py
config/: config.yaml
include/Common/: Exceptions.h  Factories.h  Helpers.h  Resources.h.in  Types.h
include/Common/Exceptions/: FilesystemException.h
include/Common/Filesystem/: Filesystem.h  IFilesystem.h  Types.h
include/Common/IdGenerators/: IUuIdGenerator.h  UuId4Generator.h
include/Common/Utils/: EnumUtils.h  GeneralUtils.h  Hasher.h  PointersUtils.h  Time.h
include/Common/Utils/ThreadUtils/: AsyncTaskExecutor.h
include/Lib/: Lib.h
src/App/: CMakeLists.txt  Main.cpp
src/Common/: CMakeLists.txt
src/Common/Exceptions/: FilesystemException.cpp
src/Common/Filesystem/: Filesystem.cpp
src/Common/IdGenerators/: UuId4Generator.cpp
src/Common/Utils/: Time.cpp
src/Lib/: CMakeLists.txt  Lib.cpp
tests/: CMakeLists.txt
tests/Common/Integration/: CMakeLists.txt
tests/Common/Integration/Filesystem/: FilesystemTest.cpp  FilesystemTest.h  FilesystemTestCase.h
tests/Common/Unit/: CMakeLists.txt
tests/Common/Unit/Utils/: GeneralUtilsTest.cpp  GeneralUtilsTest.h
tests/Common/Unit/Utils/ThreadUtils/: AsyncTaskExecutorTest.cpp  AsyncTaskExecutorTest.h
tests/Lib/Integration/: CMakeLists.txt
tests/Lib/Unit/: CMakeLists.txt
