include("${PROJECT_CONFIG_PATH}/Lib/config.cmake")

set(LIB_TESTS_UNIT_TARGET_NAME COMMONUnitTests)

set(LIB_TESTS_UNIT_INCLUDE_DIR "${${PROJECT_MAIN_NAME}_SOURCE_DIR}/tests/${LIB_TARGET_NAME}/Unit")
set(LIB_TESTS_UNIT_SRC_DIR "${${PROJECT_MAIN_NAME}_SOURCE_DIR}/tests/${LIB_TARGET_NAME}/Unit")

set(LIB_TESTS_UNIT_HEADERS_PREFIX "${LIB_TESTS_UNIT_INCLUDE_DIR}/")
set(LIB_TESTS_UNIT_SRC_PREFIX "${LIB_TESTS_UNIT_SRC_DIR}/")

set(
	LIB_TESTS_UNIT_HEADERS_LIST
    "Utils/GeneralUtilsTest.h"
	"Utils/ThreadUtils/AsyncTaskExecutorTest.h"
)
set(
	LIB_TESTS_UNIT_SRC_LIST
	"Utils/GeneralUtilsTest.cpp"
	"Utils/ThreadUtils/AsyncTaskExecutorTest.cpp"
	"main.cpp"
)

list(TRANSFORM LIB_TESTS_UNIT_HEADERS_LIST PREPEND ${LIB_TESTS_UNIT_HEADERS_PREFIX})
list(TRANSFORM LIB_TESTS_UNIT_SRC_LIST PREPEND ${LIB_TESTS_UNIT_SRC_PREFIX})

add_executable(${LIB_TESTS_UNIT_TARGET_NAME} "${LIB_TESTS_UNIT_SRC_LIST}" "${LIB_TESTS_UNIT_HEADERS_LIST}")
target_include_directories(${LIB_TESTS_UNIT_TARGET_NAME} PRIVATE "${LIB_TESTS_UNIT_INCLUDE_DIR}")

target_link_libraries(
	${LIB_TESTS_UNIT_TARGET_NAME}
	PRIVATE
		CONAN_PKG::gtest
		CT::common_utils
)

set_compiler_options(${LIB_TESTS_UNIT_TARGET_NAME})

# Group files into proper folders - for IDE
group_files("${LIB_TESTS_UNIT_HEADERS_LIST}" "${LIB_TESTS_UNIT_INCLUDE_DIR}")
group_files("${LIB_TESTS_UNIT_SRC_LIST}" "${LIB_TESTS_UNIT_SRC_DIR}")

add_test(NAME ${LIB_TESTS_UNIT_TARGET_NAME} COMMAND ${LIB_TESTS_UNIT_TARGET_NAME})
